2002-12-17  Ross Burton  <ross@burtonini.com>

	* Makefile.am (schema_in_files): Fix the schema path.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* minefield.c: Small changes to try and draw the labels at a
	sensible size. Closes #100796.

2002-11-29  Ross Burton  <ross@burtonini.com>

	* Makefile.am (EXTRA_DIST): Put the source of the schemas in the
	dist, not the generated files.

2002-11-25  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Fixed the GConf install location, thanks to Loz
	<gnome2@flower.powernet.co.uk>. Closes #99393.

2002-11-18  Fernando Herrera <fherrera@onirica.com>

	* gnomine.desktop.in: add X-GNOME-BUGZILLA stuff

2002-10-16  Ross Burton  <ross@burtonini.com>

	* gnomine.c: Re-write of the Preferences code. It's now instant
	apply, has a clearer interface, etc etc. Closes #94873.
	Also did a global s/Gnome/GNOME/ replacement.

	* minefield.c (gtk_mine_draw): Cast to PangoLayout to prevent
	warnings from Pango.

2002-08-23  Ross Burton  <ross@burtonini.com>

	* gnomine.c: Enable the high scores dialog. Patch from Andrew
	Sobala <andrew@sobala.net>, fixing #84235.

2002-06-19  Ross Burton  <ross@burtonini.com>

	* gnomine.c (about): Load the image from the application pixmap
	path, not the system path.

2002-06-09  Juan Pablo Mendoza <jpablo@gnulinux.org.mx>

	* gnomime.c (image_widget_setup): Find the images on
	  the correct location.

2002-06-03  Bastien Nocera  <hadess@hadess.net>

	* gnomine.c: made help work

2002-05-26  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for docs move
	* help/C/gnome-mines-C.omf: delete for docs move
	* help/C/gnome-mines.xml: delete for docs move
	* help/C/gnomine-C.omf: add for docs move
	* help/C/gnomine.xml: add for docs move
	
2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gnome-mines-C.omf: updated for new format of SK 0.3.8.
	
2002-04-20  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: