@@ -1,20 +1,0 @@
-/* XPM */
-static const char *flag_xpm[] = {
-/* columns rows colors chars-per-pixel */
-"12 11 3 1",
-"  c Black",
-". c #fe0204",
-"X c None",
-/* pixels */
-"XXXXXX. XXXX",
-"XXXX... XXXX",
-"XX..... XXXX",
-"....... XXXX",
-"XX..... XXXX",
-"XXXX... XXXX",
-"XXXXXX  XXXX",
-"XXXXXX  XXXX",
-"XXXXXX  XXXX",
-"XXXX      XX",
-"XX          "
-};
