@@ -1,21 +1,0 @@
-/* XPM */
-static const char *mine_xpm[] = {
-/* columns rows colors chars-per-pixel */
-"12 12 3 1",
-"  c Black",
-"X c None",
-"# c White",
-/* pixels */
-"XXXXX  XXXXX",
-"XXXXX  XXXXX",
-"XXX      XXX",
-"XX   ###  XX",
-"XX    ### XX",
-"            ",
-"            ",
-"XX        XX",
-"XX        XX",
-"XXX      XXX",
-"XXXXX  XXXXX",
-"XXXXX  XXXXX",
-};
