@@ -1,22 +1,0 @@
-/* XPM */
-static const char * question_xpm[] = {
-"12 11 8 1",
-" 	c None",
-".	c #FC0509",
-"+	c #000000",
-"@	c #FD7376",
-"#	c #FFFFFF",
-"$	c #717171",
-"%	c #AAAAAA",
-"&	c #1C1C1C",
-"      .+    ",
-"    @###    ",
-"  .#######  ",
-"...##..$##  ",
-"  .....%##  ",
-"    .###    ",
-"     ###    ",
-"      &+    ",
-"     ###    ",
-"    &###++  ",
-"  ++++++++++"};
